Fix spacing

--- a/app/assets/stylesheets/components/folders.scss
+++ b/app/assets/stylesheets/components/folders.scss
@@ -83,7 +83,7 @@
 
   &-selected-count {
     position: absolute;
-    top: 5px;
+    top: 10px;
     right: 0;
     color: $secondary-text-colour;
     whitespace: no-wrap;
